<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:minHeight="108dp">


    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="289dp"
        android:layout_height="65dp"

        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"

            android:layout_width="61dp"
            android:layout_height="58dp"
            android:layout_gravity="center"

            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo3"
            app:layout_constraintRight_toLeftOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"

            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/bgname"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/ImageView2"

            android:layout_width="61dp"
            android:layout_height="58dp"
            android:layout_gravity="center"

            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo3"
            app:layout_constraintRight_toLeftOf="@+id/textView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ping"
            android:textColor="@color/btn" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/download"
            android:textColor="@color/btn22" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upload"
            android:textColor="@color/btn22" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout4"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/ping"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/download"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/upload"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:indeterminate="false"
            android:theme="@style/Animation.AppCompat.DropDownUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="493dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout6"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/Layout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ClientPic"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/clienticon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ServerPic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/servericon"
            app:srcCompat="@drawable/s" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>